--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
     "@headlessui/react": "^2.2.0",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/material": "^7.0.1",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "cheerio": "^1.0.0",
@@ -19,6 +21,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "framer-motion": "^12.0.5",
+    "gsap": "^3.12.7",
     "puppeteer": "^24.4.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
@@ -26,6 +29,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "rss-parser": "^3.13.0",
+    "three": "^0.175.0",
     "xml2js": "^0.6.2",
     "yahoo-finance2": "^2.13.3"
   },
