--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/cache": "^11.14.0",
+    "@emotion/react": "^11.14.0",
     "@google/generative-ai": "^0.24.0",
     "@headlessui/react": "^2.2.0",
     "@mui/icons-material": "^7.0.1",
@@ -30,6 +32,7 @@
     "react-router-dom": "^7.3.0",
     "rss-parser": "^3.13.0",
     "three": "^0.175.0",
+    "vanta": "^0.5.24",
     "xml2js": "^0.6.2",
     "yahoo-finance2": "^2.13.3"
   },
