--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "rss-parser": "^3.13.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "three": "^0.175.0",
     "vanta": "^0.5.24",
     "xml2js": "^0.6.2",
