--- a/package.json
+++ b/package.json
@@ -17,16 +17,22 @@
     "@headlessui/react": "^2.2.0",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
+    "apexcharts": "^4.5.0",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-chart-financial": "^0.2.1",
+    "chartjs-plugin-zoom": "^2.2.0",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "framer-motion": "^12.0.5",
     "gsap": "^3.12.7",
     "puppeteer": "^24.4.0",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
